2007-05-22  Benoit Gréoire  <bock@step.polymtl.ca>
	* Reverse part of [1230], hotspot_network_name was already available as standardised variable networkName, and hotspot_network_url as networkWebSiteURL.
	* Reverse part of [1231]:  remove script tag, banning it was the reason the sag striping code was put in in the first place.  We may want to consider creating a RawHTMLContent Content Type.
	
2007-05-22  Benoit Gréoire  <bock@step.polymtl.ca>
    * locales/el/: Add new greek translation contributed by Nikola Petrov

2007-05-17 François Proulx <francois.proulx@gmail.com>
	* WARNING: This has not been fully tested. Full testing to be completed on 2006-05-18
	  but I'm pretty confident that it works pretty well.
	* Added automatic resize on Avatars
	* Added FavoriteHotspots content (mostly used for Profiles)
	* Added new features to Content and File
	* Fixed URL regexp bug in HyperlinkUtils
	* Updated French translations
	* Updates profiles template
	* TODO: Add getNewUI et processNewUI to FavoriteHotspots to simplify input

2007-05-03  Benoit Gréoire  <bock@step.polymtl.ca>
    * MainUI_ToolContent.tpl: Make preferences_link, login_link, and logout_link CSS targetable.  Get rid of some deprecated CSS.

2007-04-25  Benoit Gréoire  <bock@step.polymtl.ca>
    * ShoutBox.php:  The shout form wasn't displayed whent there weren't any Shouts yet, doh!

2007-04-24 Benoit Grégoire  <bock@step.polymtl.ca>
	* AuthenticatorRadius.php:  Fix RADIUS dependency detection bug related to case sensitivity

2007-04-19  Benoit Grégoire  <bock@step.polymtl.ca>
	* RssAggregator.php:  Fix bug saving the max item age.
	* Forgot to remove a bunch of links to faq.php.

2007-04-03 Benoit Grégoire  <bock@step.polymtl.ca>
	* AnonymisedDataExport.php:  New report.  Adds the ability to export anonymised SQL data for academic research.

2007-03-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* Shoutbox.php: Allow limiting the number of characters entered for a shout.